feat(server): 주차장 관리 API 구현 - 주차장 등록 - 주차장 목록 조회 - 주차장 조회
